# diff-html

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: htmldiff.rs  lib.rs  plugin.rs
test_files/: diff.diff  diff2.diff  text1.txt  text2.txt
tests/: diff_test.rs
