[package]
name = "diff-html-rs"
version = "0.1.0"
edition = "2021"
authors = ["zs.matrix62@gmail.com"]
description = "HTML diff implementation in Rust"
license = "MIT"
repository = "https://github.com/zsmatrix62/diff-html"

[features]
default = []
extism = ["extism-pdk"]

[dependencies]
extism-pdk = { version = "1.3.0", optional = true }
diff = "0.1.13"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.9.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
